# dungeongen

./: .env.example  .gitignore  pyproject.toml
dungeongen/: chat.py  compendium.py  gate.py  main.py
dungeongen/schema/: dndapi_model.py  openrouter_model.py
src/: chat.py  compendium.py  gate.py  main.py
src/dungeongen/: chat.py  compendium.py  gate.py  main.py
src/schema/: novelai_model.py
tests/: conftest.py  gate_test.py  mock_data.py  test_chat.py  test_compendium.py  test_gate.py  test_main.py
